--- a/package.json
+++ b/package.json
@@ -12,52 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
-    "@syncfusion/ej2-angular-navigations": "^17.1.49",
-    "@syncfusion/ej2-angular-schedule": "^17.1.51",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.9",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@syncfusion/ej2-angular-navigations": "^17.4.44",
+    "@syncfusion/ej2-angular-schedule": "^17.4.43",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "ng-drag-drop": "^4.0.1",
-    "ngx-bootstrap": "^2.0.5",
-    "npm": "^6.9.2",
-    "popper.js": "^1.14.0",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
+    "ng-drag-drop": "^5.0.0",
+    "ngx-bootstrap": "^5.3.2",
+    "npm": "^6.13.6",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.0.118",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.8.0",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "^8.3.23",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.5.1",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.5.0",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "^5.4.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "ts-node": "~8.6.2",
+    "tslint": "~6.0.0",
+    "typescript": "~3.7.5"
   }
 }
