--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@syncfusion/ej2-angular-base": "^17.4.43",
     "@syncfusion/ej2-angular-navigations": "^17.4.44",
     "@syncfusion/ej2-angular-schedule": "^17.4.43",
+    "@syncfusion/ej2-base": "^17.4.43",
+    "@syncfusion/ej2-schedule": "^17.4.43",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "mem": "^6.0.1",
     "moment": "^2.24.0",
     "ng-drag-drop": "^5.0.0",
     "ngx-bootstrap": "^5.3.2",
@@ -43,7 +47,7 @@
     "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "^3.5.1",
+    "@types/jasmine": "^3.5.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.5.0",
     "codelyzer": "^5.0.1",
@@ -56,7 +60,7 @@
     "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "^5.4.2",
     "ts-node": "~8.6.2",
-    "tslint": "~6.0.0",
+    "tslint": "^5.20.1",
     "typescript": "~3.4.5"
   }
 }
