--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fullcalendar/angular": "^4.4.5-beta",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@syncfusion/ej2-angular-base": "^17.4.43",
     "@syncfusion/ej2-angular-navigations": "^17.4.44",
@@ -38,10 +43,13 @@
     "ngx-bootstrap": "^5.3.2",
     "npm": "^6.13.6",
     "popper.js": "^1.16.1",
+    "primeflex": "^1.0.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.5",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
